--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="main">
 
+        <div class="cursor"></div>
+
         <div class="string">
             <svg width="1000" height="500">
                 <path d="M 10 250 Q 95 250 990 250" stroke="white" fill="transparent"/>
@@ -114,43 +116,51 @@
             <div class="page1">
                 <div class="sliding-txt">
                     <div class="block">
-                        <h1>
-                            <span>W</span>
-                            <span>e</span>
-                        </h1>
+                        <div class="firstline">
+                            <h1>
+                                <span>W</span>
+                                <span>e</span>
+                            </h1>
+                        </div>
                         <br>
-                        <h1>
-                            <span>D</span>
-                            <span>e</span>
-                            <span>s</span>
-                            <span>i</span>
-                            <span>g</span>
-                            <span>n</span>
-                        </h1>
+                        <div class="secondline">
+                            <h1>
+                                <span>D</span>
+                                <span>e</span>
+                                <span>s</span>
+                                <span>i</span>
+                                <span>g</span>
+                                <span>n</span>
+                            </h1>
+                        </div>
                         <br>
-                        <h1>
-                            <span>D</span>
-                            <span>i</span>
-                            <span>g</span>
-                            <span>i</span>
-                            <span>t</span>
-                            <span>a</span>
-                            <span>l</span>
-                        </h1>
+                        <div class="thirdline">
+                            <h1>
+                                <span>D</span>
+                                <span>i</span>
+                                <span>g</span>
+                                <span>i</span>
+                                <span>t</span>
+                                <span>a</span>
+                                <span>l</span>
+                            </h1>
+                        </div>
                         <br>
-                        <h1>
-                            <span>E</span>
-                            <span>x</span>
-                            <span>p</span>
-                            <span>e</span>
-                            <span>r</span>
-                            <span>i</span>
-                            <span>e</span>
-                            <span>n</span>
-                            <span>c</span>
-                            <span>e</span>
-                            <span>s</span>
-                        </h1>
+                        <div class="fourthline">
+                            <h1>
+                                <span>E</span>
+                                <span>x</span>
+                                <span>p</span>
+                                <span>e</span>
+                                <span>r</span>
+                                <span>i</span>
+                                <span>e</span>
+                                <span>n</span>
+                                <span>c</span>
+                                <span>e</span>
+                                <span>s</span>
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
