--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,8 @@
         </div>
     </div>
 
+    <!-- resposive start -->
+
     <div class="res-main">
         <div class="res-logo">
             <img src="Accets/images/Brandium-Logo.png" alt="">
